<resources>
    <string name="app_name">FootballMatchManager</string>
    <string name="cuadroemail">Correo</string>
    <string name="contrasenaemail">Contraseña</string>
    <string name="registrasenormal">Registrarse</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="iniciarsesioncongoogle">Iniciar Sesion con Google</string>
    <string name="EncabezadoLogin">FootballMatchManager</string>
    <string name="google_web_client_id" translatable="false">359201656465-8ahb3sc8il2l8g1pn778bt9n5ln4pnmp.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cerrar">Cerrar</string>
    <string name="eliminar">eliminar</string>
    <string name="crearjugadores">Crear Jugadores</string>
    <string name="crearpartidos">Crear Partidos</string>
    <string name="rankings">Rankings</string>
    <string name="jugarbalon">Jugar al balon</string>
    <string name="preferencias">Preferencias</string>
    <string name="acercade">Acerca de</string>
    <string name="contacto">Contacto</string>
    <string name="menudeopciones">Menu de opciones</string>
    <string name="volversincerrar">Volver(sin cerrar sesion)</string>
    <string name="crearpartido">Crear partido</string>
    <string name="crearjugador">Crear Jugador</string>
    <string name="sobremi">!Hola! Soy José un estudiante del grado de desarrollador de aplicaciones multiplataforma,este es mi proyecto de android.La idea de hacer este proyecto vino porque necesitabamos hacer una aplicacion util que nos sirviese o le sirviese a alguien de algo.Pense en mis amigos y como nos gusta mucho el futbol sala pense en hacer un gestor de partidos y de jugadores para ver nuestras estadisticas y ver quien hace mas goles,asistencias...</string>
    <string name="github">Enlace a mi GitHub</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="fecha">fecha(YYYY-MM-DD)</string>
    <string name="hora">Hora(HH:MM)</string>
    <string name="eliminarjugadorespartido">Eliminar jugadores del partido</string>
    <string name="guardar">Guardar</string>
    <string name="abrircamara">Abrir camara</string>
    <string name="Portero">portero</string>
    <string name="jugador">Jugador</string>
    <string name="goles">Goles</string>
    <string name="asistencias">Asistencias</string>
    <string name="Continuar">Continuar</string>
    <string name="cerrarsesion">Cerrar sesion</string>
    <string name="borrarusu">Borrar usuario</string>
    <string name="modificar">Modificar</string>
    <string name="verjugadores">Ver Jugadores</string>
    <string name="aplicar">Aplicar</string>
    <string name="datos">Datos</string>
    <string name="ingles">Ingles</string>
    <string name="español">Español</string>
</resources>