<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_crear_jugador"
        android:title="@string/crearjugadores"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_opciones"
        android:title="@string/menudeopciones"
        app:showAsAction="never" />
    <item
        android:id="@+id/crearparrtido"
        android:title="@string/crearpartidos"
        app:showAsAction="never" />
    <item
        android:id="@+id/Preferencias"
        android:title="@string/preferencias"
        app:showAsAction="never" />
    <item
        android:id="@+id/ranking"
        android:title="@string/rankings"
        app:showAsAction="never" />
    <item
        android:id="@+id/acercade"
        android:title="@string/acercade"
        app:showAsAction="never" />
    <item
        android:id="@+id/jugarbalon"
        android:title="@string/jugarbalon"
        app:showAsAction="never" />
</menu>