<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <!-- Campo de Fecha -->
    <!-- Campo de Fecha -->
    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/emblema_one"
        android:hint="@string/fecha"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo de Hora -->

    <!-- Botón Cerrar -->


    <!-- Botón Agregar Jugadores -->
    <EditText
        android:id="@+id/editTextHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/emblema_one"
        android:hint="@string/hora"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFecha" />

    <Button
        android:id="@+id/btnAgregarJugadores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/common_google_signin_btn_text_dark_normal_background"
        android:text="@string/eliminarjugadorespartido"
        android:textColor="@color/md_theme_dark_onBackground"
        android:textColorLink="@color/md_theme_dark_onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>